# elastic-blast

./: .gitignore  .pylintrc  CITATION.cff  DISCLAIMER.md  Makefile  Makefile-create-blastdb-metadata  Makefile-gcp-elb-janitor  Makefile-pypi  README.md  pex-cloudbuild.yaml  setup.cfg  setup.cfg_cloud  setup.py  tox.ini  validate-pex-cloudbuild.yaml
.github/workflows/: build-multi-pex.yml
docker-blast/: .dockerignore  Dockerfile  Dockerfile-build-from-local-sources  LICENSE.md  Makefile  README.md  awscloudbuild.yaml  cloudbuild.yaml  fasta-split  requirements.txt  splitq_download_db_search  submit_jobs.py  test-docker-image-aws.yaml  test-docker-image-gcp.yaml  update_blastdb.pl
docker-blast/test_data/: Garbage_query_file.fa  pdbnt.nin  pdbnt.nnd  pdbnt.nni  pdbnt.nog  pdbnt.nos  pdbnt.not  pdbnt.ntf  pdbnt.nto
docker-demo/: .gcloudignore  Dockerfile  Dockerfile-build-from-local-sources  Makefile  Makefile-demo.mk  README.md  cloudbuild.yaml  elb-aws-blastn-mane-pdbnt.ini  elb-gcp-blastn-mane-pdbnt.ini  elb-gcp-blastp-coala-refseq-prot.ini  elb-gcp-blastx-mane-swissprot.ini  requirements.txt  test-cloudbuild.yaml
docker-janitor/: Dockerfile-build-from-local-sources.gcp  Dockerfile.gcp  Makefile  README.md  cloudbuild.yaml  cloudrun.yaml  elastic-blast-janitor.sh  requirements.txt
docker-job-submit/: .gitignore  Dockerfile-build-from-local-sources.aws  Dockerfile.aws  Dockerfile.azure  Dockerfile.gcp  Makefile  awscloudrun.yaml  cloud-job-submit-aks.sh  cloud-job-submit.sh  cloudbuild.yaml  cloudrun.yaml  requirements.txt  submit_jobs.py
docker-openapi/: Dockerfile  Makefile  README.md
docker-openapi/app/: elb-cfg.ini  main.py  requirements.txt  util.py
docker-openapi/nginx/: default.conf
docker-qs/: Dockerfile  Dockerfile-build-from-local-sources  Makefile  README.md  awscloudbuild.yaml  cloudbuild.yaml  cloudrun.yaml  requirements.txt  run.sh  test-cloudbuild.yaml
docs/: README-fasta-split.md  azure-prereq.md  environment.md
lambda-janitor/: .gitignore  Makefile  README.md  janitor-test-stack.yaml  lambda_elb.py  requirements-for-testing.txt
requirements/: base.txt  test.txt
share/etc/: elastic-blast-aws-iam-policy.json.template  elb-aws-blastn-core-nt-8-nodes.ini  elb-aws-blastn-nt-8-nodes.ini  elb-blastp-nr.ini  yamllint-config.yaml
src/elastic_blast/: __init__.py  aws.py  aws_traits.py  azure.py  azure_traits.py  base.py  config.py  constants.py  db_metadata.py  elasticblast.py  elasticblast_factory.py  elb_config.py  filehelper.py  gcp.py  gcp_traits.py  janitor.py  jobs.py  kubernetes.py  object_storage_utils.py  split.py  status.py  subst.py  taxonomy.py  tuner.py  util.py
src/elb/: aws.py  aws_traits.py  base.py  config.py  constants.py  cost.py  elb_config.py  filehelper.py  gcp.py  jobs.py  kubernetes.py  split.py  subst.py  taxonomy.py  tuner.py  util.py
tests/: integration-test-for-failure-with-code.sh  integration-test-for-job-failure.sh  integration-test-synchronous.sh  integration-test.sh  run_summary_correctness_test.py  tc-bash-runner.sh  test-resubmission-to-same-results-bucket.sh  utils.py
tests/app/: elastic_blast_app.py  gcloud  pytest.ini  test_elasticblast.py
tests/aws/: test_aws.py
tests/aws_traits/: pytest.ini  (+1 more)
(+162 files in other folders)
