[metadata]
name = elastic_blast
description = ElasticBLAST is a cloud-based tool to perform your BLAST searches faster and make you more effective
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = NCBI
maintainer_email = elastic-blast-support@ncbi.nlm.nih.gov
python_requires = >=3.7
license_files = file:LICENSE
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
keywords = "BLAST", "Alignment", "Cloud Computing", "Bioinformatics"
url = https://blast.ncbi.nlm.nih.gov/doc/elastic-blast
project_urls =
    Repository = https://github.com/ncbi/elastic-blast/
    ChangeLog = https://github.com/ncbi/elastic-blast/releases
    Support = https://blast.ncbi.nlm.nih.gov/doc/elastic-blast/support.html
    Tutorials = https://blast.ncbi.nlm.nih.gov/doc/elastic-blast/tutorials.html

[files]
packages_root = src

scripts =
  bin/*

data_files =
  share = share/**
  Makefile = Makefile

[auto-version]
type = git-pep440
